[gd_scene load_steps=3 format=3 uid="uid://chr00ggvqg3yl"]

[ext_resource type="Script" uid="uid://ck76ge6wlenw8" path="res://_Scripts/Tutorial/maths_tutorial.gd" id="1_ghamr"]
[ext_resource type="Theme" uid="uid://engys5p3iknv" path="res://Assets/Themes/label.tres" id="3_fhw8l"]

[node name="MathsTutorial" type="Node2D"]
script = ExtResource("1_ghamr")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Label" type="Label" parent="."]
offset_left = 139.0
offset_top = 76.0
offset_right = 1143.0
offset_bottom = 273.0
theme = ExtResource("3_fhw8l")
text = "> LISTEN UP, HACKER
> YOU'VE BEEN CHOSEN SPECIALLY TO COMPLETE THIS MISSION BASED 
  ON YOUR KNOWLEDGE OF INFIX NOTATION 
"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.04

[node name="HUHButton" type="Button" parent="."]
offset_left = 1021.0
offset_top = 251.0
offset_right = 1126.0
offset_bottom = 300.0
theme = ExtResource("3_fhw8l")
text = "HUH?"

[node name="ContinueButton" type="Button" parent="."]
offset_left = 933.0
offset_top = 349.0
offset_right = 1211.0
offset_bottom = 421.0
theme = ExtResource("3_fhw8l")
text = "CONTINUE"
flat = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="HUHButton" to="." method="_on_huh_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
